# subop-vldb-2023-reproducibility

./: .gitignore  .gitmodules  Readme.md  blackscholes-subop.py  blackscholes-weld.py  blackscholes_numpy.py  haversine-numpy.py  haversine-subop.py  haversine-weld.py  imdb-generate-pagerank-edges.py  imdb-pagerank-recursive-hyper.py  imdb-pagerank-recursive.py  imdb-pagerank.mlir  imdb-pagerank.py  imdb-similarity-join-pushdown.mlir  imdb-similarity-join.mlir  imdb-similarity-join.py  requirements.txt  taxi-kmeans-prepare-data.py  taxi-kmeans-recursive-hyper.py  taxi-kmeans.mlir  taxi-kmeans.py
cppweld/: CMakeLists.txt  Dockerfile  main.cpp
cppweld/experiments/: CMakeLists.txt  experiments.h
cppweld/experiments/kmeans/: kmeans.cpp
cppweld/experiments/pagerank/: pagerank.cpp
loc-analysis/: Readme.md  duckdb-locs.sql  lingodb-locs.sql
numsubop/: __init__.py
pyweld/: Dockerfile
