cmake_minimum_required(VERSION 3.24)
project(weld_experiments)
cmake_policy(SET CMP0067 NEW)
set(CMAKE_CXX_STANDARD 20)
include_directories("$ENV{WELD_HOME}/c")
link_directories("$ENV{WELD_HOME}/target/release")
add_subdirectory(experiments)
add_executable(weld_experiments main.cpp)
target_link_libraries(weld_experiments benchmarks weld)
